# Data-Analyst-Project-Template

./: README.md  pyproject.toml  requirements.txt
scripts/: analysis.py
